# lidr-AI-Engineering

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CONCLUSIONS.md  Dockerfile  README.md  alembic.ini  arquitectura-actual.md  docker-compose.yml  justfile  output_examples.txt  pyproject.toml  streamlit_app.py  streamlit_common.py  streamlit_stream_app.py
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 0001_session6_initial.py  0002_vector_schema.py  0003_session10_fts.py  0004_session10_multi_index.py  0005_session11_hnsw_multi_index.py
app/: config.py  dependencies.py  main.py
app/api/: config.py  deps.py  embeddings.py  estimations.py  ingestion.py  rate_limiting.py  search.py  security.py  sessions.py
app/cache/: __init__.py  semantic.py
app/context/: examples.py
app/domain/: agent_estimation.py  estimation_service.py  graph_estimation.py  supervisor_estimation.py
app/embedding_pipeline/: __init__.py  chunker.py  embedder.py  router.py  schemas.py
app/errors/: llm_error.py
app/formatters/: llm_formatters.py
app/foundation/: formatters.py
app/guardrails/: __init__.py  input.py  output.py
app/ingestion/: __init__.py  architecture.py  orchestrator.py
app/persistence/: __init__.py
app/prompts/: loader.py
app/routers/: estimations.py  ingestion.py  sessions.py
app/schemas/: acb.py  attachments.py  critic.py  estimation.py  sessions.py
app/services/: attachment_service.py  boss.py  cache.py  calc_service.py  conversation_transcript.py  critic.py  estimation_service.py  evaluation.py  llm_wrapper.py  project_metadata_extractor.py  sessions.py  tier_resolver.py
data/: budgets_sample.json  task_corpus.json  task_corpus_contradictions.json  technical_docs_sample.json  test_queries.json  transcripts_sample.json
evals/: RAGAS_BASELINE_S11.md  __init__.py  citation-verification-report.md  golden_generation.json  golden_retrieval.json  ragas-metrics-note.md  ragas_baseline_s11.json  ragas_cache.json
evals/stress/: REPORT.md  __init__.py  metrics.py  results.csv  run.py  scenarios.py
examples/: trace_s09.py
examples/transcripts/: 02_ambiguous.txt  TEMPLATE.md
exercises/session-12/: README.md  calculate_estimate_skeleton.py  example_trace_complex.txt  reference_retrieval.py
exercises/session-13/: README.md  example_graph_response.json
exercises/session-14/: README.md  example_run_edge_case.txt  example_run_edge_case_http.txt  example_run_happy.txt  example_run_happy_http.txt  example_run_violate.txt  sample_transcript_edge_case.txt  sample_transcript_happy_path.txt
scripts/: build_contradictions_s11.py  build_multi_index_corpus.py  build_task_corpus.py  compare.py  compare_chunkers.py  compare_indexes_s08.py  demo_cleaning_s06.py  demo_pii_s06.py  eval_generation_s11.py  eval_ragas_s11.py  eval_retrieval_s10.py  insert_synthetic_chunks_s08.py  measure_baseline_s08.py  preflight_s06.py  query_examples.py  ragas_compat.py  report_index_sizes_s08.py  run_agent_s12.py  run_agent_s13.py  run_agent_s14.py  s08_common.py  score_ragas_s11.py  sweep_ef_search_s08.py
scripts/sql_s08/: 01_create_hnsw.sql  02_test_antipatron.sql  03_create_halfvec.sql  04_monitoring_queries.sql  05_maintenance_cycle.sql  99_revert_live_session.sql
streamlit_ui/: __init__.py  agent_estimation.py  agents.py  common.py  graph_flow.py  home.py  path_setup.py  rag.py  store.py  stream_app.py  supervisor_flow.py
streamlit_ui/pages/: 10_Supervisor.py  1_Estimacion.py  2_Conversacion.py  3_RAG_Lab.py  4_Ajustes_IA.py  5_RAG_Estimacion.py  6_Corpus_Index.py  7_Agentes.py  8_Historial_RAG.py  9_Grafo_Agentes.py
tests/: conftest.py  test_health.py
tests/api/: test_estimate_stages.py  test_idempotency.py  test_rate_limiting.py  test_security.py
tests/integration/: test_graph_checkpoint_postgres.py  test_supervisor_checkpoint_postgres.py
tests/prompts/: test_estimation_v1.py
tests/unit/: test_async_openai_client.py  test_config.py  test_langgraph_persistence.py  test_rag_store_models.py  test_run_agent_s12.py  test_run_agent_s13.py  test_run_agent_s14.py  test_streamlit_agent_estimation.py  (+5 more)
(+297 files in other folders)
