[project]
name = "estimador-cag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "instructor>=1.15.1",
    "jinja2>=3.1.6",
    "litellm",
    "litellm[google]",
    "pydantic>=2.13.4",
    "pydantic-settings",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-dotenv",
    "python-multipart",
    "numpy",
    "redis>=5.0",
    "redisvl",
    "ruff",
    "sse-starlette>=2.1",
    "starlette>=1.0.0",
    "streamlit>=1.57.0",
    "structlog",
    "uvicorn[standard]",
    "watchdog>=6.0.0",
    # Session 6 — data-driven AI (ingestion + Postgres + PII/GDPR)
    "pandas>=2.2",
    "pandera>=0.20",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "faker>=24.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.20",
    "deepeval>=4.0.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "eval: LLM evaluation tests that may require external model access",
    "slow: slower tests that are not intended for the tight feedback loop",
]
